--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,12 @@
         <title>Frontend Template</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="assets/css/normalize.css">
         <link rel="stylesheet" href="assets/css/main.css">
     </head>
     <body>
+        <p>test</p>
+
         <script src="assets/js/app.js"></script>
     </body>
 </html>
